# nontainer

./: CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: api.md  apps.md  design.md  quick-start.md
docs/a2ui/: catalog.json
dogfood/: GATE.md  analyst_agent.py  fidelity_probe.py
examples/: _model.py  analyst.py  webapp.py
nontainer/: __init__.py  cache.py  editing.py  errors.py  executor.py  executor_dud.py  hints.py  presets.py  protocol.py  skills.py  workspace.py
nontainer/adapters/: __init__.py  a2ui.py  agno.py  mcp.py  render.py
nontainer/apps/: __init__.py  browser.py  contract.py  curl.py  dispatch.py  serve.py  testapp.py
nontainer/providers/: __init__.py  agentfs.py  dir.py  kvgit.py
tests/: conftest.py  test_a2ui.py  test_adapters.py  test_agent_patterns.py  test_agentfs_provider.py  test_agno_adapter.py  test_apps_browser.py  test_apps_dispatch.py  test_apps_m1.py  test_apps_m2.py  test_apps_m3.py  test_apps_serving.py  test_apps_surface.py  test_apps_testapp.py  test_async_facades.py  test_concurrency.py  test_dir_provider.py  test_dud_executor.py  test_factory.py  test_file_tools.py  test_hints.py  test_kvgit_provider.py  test_mcp_adapter.py  test_mounts_and_cache.py  test_presets.py  test_primer.py  test_process_isolation.py  test_protocol.py  test_put_get.py  test_render.py  test_result_checkpoints.py  test_run_python.py  test_skills.py  test_terminal.py  test_terminal_python_sys.py  test_ui_artifacts.py  test_workspace_root.py
