[project]
name = "nontainer"
version = "0.0.1"
description = "A fake little computer for your agent: versioned filesystem, shell, and sandboxed Python."
readme = "README.md"
license = "MIT"
authors = [
    {name = "ashenfad"},
]
keywords = ["agents", "sandbox", "workspace", "terminal", "versioning"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    "termish>=0.1.7",
    "monkeyfs>=0.1.5",
    "sandtrap>=0.2.2",
    "kvgit[disk]>=0.3.0",
    "reprobate>=0.1.1",
]

[project.urls]
"Homepage" = "https://github.com/ashenfad/nontainer"
"Bug Tracker" = "https://github.com/ashenfad/nontainer/issues"
"Source" = "https://github.com/ashenfad/nontainer"

[project.optional-dependencies]
agentfs = [
    "agentfs-sdk>=0.6",
]
apps = [
    "playwright>=1.40",
    "starlette>=0.37",
    "anyio>=4",
]
agno = [
    "agno>=1.0",
]
mcp = [
    "mcp>=1.0",
]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "httpx2",
    # exercised by the preset tests (plotly deliberately left out —
    # its preset path is importorskip'd)
    "numpy",
    "pandas",
    "matplotlib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nontainer"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
