[project]
name = "nontainer"
version = "0.2.1"
description = "A fake little computer for your agent: versioned filesystem, shell, and sandboxed Python."
readme = "README.md"
license = "MIT"
authors = [
    {name = "ashenfad"},
]
keywords = ["agents", "sandbox", "workspace", "terminal", "versioning"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]
requires-python = ">=3.10"
dependencies = [
    # 0.1.9: a failing command's stdout survives the raise — curl's
    # error BODY reaches the agent, not just "HTTP 404" (every hint
    # dispatch writes rides in that body)
    "termish>=0.1.9",
    "monkeyfs>=0.1.5",
    # 0.2.12: Policy.module_root — VFS imports resolve from the
    # workspace root (the /workspace path contract)
    "sandtrap>=0.2.12",
    # 0.3.2: kvgit.delete_branches — anchor-free admin deletion, so
    # session teardown no longer needs the __void__ anchor dance
    "kvgit[disk]>=0.3.2",
    "reprobate>=0.1.1",
]

[project.urls]
"Homepage" = "https://github.com/ashenfad/nontainer"
"Documentation" = "https://github.com/ashenfad/nontainer#readme"
"Bug Tracker" = "https://github.com/ashenfad/nontainer/issues"
"Source" = "https://github.com/ashenfad/nontainer"

[project.optional-dependencies]
agentfs = [
    "agentfs-sdk>=0.6",
]
apps = [
    "playwright>=1.40",
    "starlette>=0.37",
    "anyio>=4",
]
agno = [
    "agno>=1.0",
]
mcp = [
    "mcp>=1.0",
]
dud = [
    # dud itself requires >=3.11; the marker keeps nontainer's 3.10
    # floor intact for everyone not opting into this executor.
    # 0.2.1: the guest mounts its workspace AT the configured root
    # (/workspace), so agent absolute paths match LocalExecutor's.
    "dud>=0.2.1; python_version >= '3.11'",
]
dev = [
    "ruff",
    "pytest",
    "pytest-asyncio",
    "httpx2",
    # exercised by the preset tests (plotly deliberately left out —
    # its preset path is importorskip'd)
    "numpy",
    "pandas",
    "matplotlib",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["nontainer"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I"]
ignore = ["E731"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
